--- a/MvcBookStore.csproj
+++ b/MvcBookStore.csproj
@@ -123,6 +123,7 @@
     <Content Include="img\cart\cart-1.jpg" />
     <Content Include="img\cart\cart-2.jpg" />
     <Content Include="img\cart\cart-3.jpg" />
+    <Content Include="img\cart\cart.jpg" />
     <Content Include="img\categories\cat-1.jpg" />
     <Content Include="img\categories\cat-2.jpg" />
     <Content Include="img\categories\cat-3.jpg" />
@@ -226,6 +227,8 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BookStoreController.cs" />
+    <Compile Include="Controllers\GioHangController.cs" />
+    <Compile Include="Controllers\NguoiDungController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -256,6 +259,7 @@
     <Compile Include="Models\DONDATHANG.cs">
       <DependentUpon>Book.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\GioHang.cs" />
     <Compile Include="Models\KHACHHANG.cs">
       <DependentUpon>Book.tt</DependentUpon>
     </Compile>
@@ -305,6 +309,12 @@
     <Content Include="Views\BookStore\SPTheochude.cshtml" />
     <Content Include="Views\BookStore\SPTheoNXB.cshtml" />
     <Content Include="Views\BookStore\Details.cshtml" />
+    <Content Include="Views\NguoiDung\Dangky.cshtml" />
+    <Content Include="Views\NguoiDung\Dangnhap.cshtml" />
+    <Content Include="Views\Giohang\GioHang.cshtml" />
+    <Content Include="Views\Giohang\GiohangPartial.cshtml" />
+    <Content Include="Views\Giohang\DatHang.cshtml" />
+    <Content Include="Views\Giohang\Xacnhandonhang.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
